--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   database: sherman_development
   pool: 5
   host: localhost
-  username:
+  username:  toddpacker
   password:
 
 test:
@@ -13,7 +13,7 @@ test:
   database: sherman_test
   pool: 5
   host: localhost
-  username: AdiSingh
+  username:  toddpacker
   password:
 
 production:
@@ -22,5 +22,5 @@ production:
   database: sherman_production
   pool: 5
   host: localhost
-  username: AdiSingh
+  username:  toddpacker
   password:
